--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ sdf-viewer = { path = "../sdf-viewer", features = ["sdfffi"], default-features =
 clap = { version = "3", features = ["derive"] } # CLI parser. Heavy dependency on this version because of klask.
 cgmath = { version = "0.18" } # Math library (shared with three-d)
 wasm-bindgen = "0.2.95"
+once_cell = "1.8.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
