--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 sdf-viewer = { path = "../sdf-viewer", features = ["sdfffi"], default-features = false }
-clap = { version = "3", features = ["derive"] } # CLI parser. Heavy dependency on this version because of klask.
 cgmath = { version = "0.18" } # Math library (shared with three-d)
 wasm-bindgen = "0.2.95"
 once_cell = "1.8.0"
@@ -15,4 +14,4 @@ crate-type = ["cdylib", "rlib"]
 
 [[bin]]
 name = "press"
-path = "src/lib.rs"
+path = "src/bin.rs"
