--- a/objects/mosquito/Cargo.toml
+++ b/objects/mosquito/Cargo.toml
@@ -8,6 +8,7 @@ press-common = { path = "../../common" }
 cgmath = { version = "0.18" }
 wasm-bindgen = "0.2.95"
 once_cell = "1.8.0"
+sdf-viewer = { path = "../../../sdf-viewer", features = ["sdfffi"], default-features = false }
 
 [lib]
 crate-type = ["cdylib", "rlib"]
